# zabbix-mcp-server

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: .env.example  mcp.json
scripts/: start_server.py  test_server.py
src/zabbix_mcp_server/: __init__.py  api_docs_scraper.py  client.py  config.py  server.py  utils.py
